tests/baselines/reference/parserArrowFunctionExpression17(target=es6).errors.txt
fileJs.js(1,1): error TS2304: Cannot find name 'a'.
fileJs.js(1,5): error TS2304: Cannot find name 'b'.
fileJs.js(1,15): error TS2304: Cannot find name 'd'.
fileJs.js(1,15): error TS8010: Type annotations can only be used in TypeScript files.
fileJs.js(1,20): error TS2304: Cannot find name 'e'.
fileTs.ts(1,1): error TS2304: Cannot find name 'a'.
fileTs.ts(1,5): error TS2304: Cannot find name 'b'.
fileTs.ts(1,15): error TS2304: Cannot find name 'd'.
fileTs.ts(1,20): error TS2304: Cannot find name 'e'.


==== fileJs.js (5 errors) ====
    a ? b : (c) : d => e // Not legal JS; "Unexpected token ':'" at last colon
    ~
!!! error TS2304: Cannot find name 'a'.
        ~
!!! error TS2304: Cannot find name 'b'.
                  ~
!!! error TS2304: Cannot find name 'd'.
                  ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
                       ~
!!! error TS2304: Cannot find name 'e'.
    
==== fileTs.ts (4 errors) ====
    a ? b : (c) : d => e
    ~
!!! error TS2304: Cannot find name 'a'.
        ~
!!! error TS2304: Cannot find name 'b'.
                  ~
!!! error TS2304: Cannot find name 'd'.
                       ~
!!! error TS2304: Cannot find name 'e'.
    